deployment-prod.yml
kind: Service
apiVersion: v1
metadata:
  name: social-media-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    #type: LoadBalancer
  selector:
    app: social-media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-media-deployment
  labels:
    app: social-media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-media
      track: stable
  template:
    metadata:
      labels:
        app: social-media
        track: stable
    spec:
      containers:
      - name: social-media
        image: renardarv/pesbuk:buildnumber 
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: "/var/www/html/config"
      volumes:
      - configMap:
            name: location-configmap
        name: config
      restartPolicy: Always
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: social-media-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pes-prod.renard.my.id 
    http:
      paths:
      #- path: /
      - backend:
          serviceName: social-media-service
          servicePort: 8080
